# adriac

./: .gitattributes  .gitignore  CMakeLists.txt  adriac.avprj  build  changes.md  component.json  example-build.sh  gendoc.sh  gulpfile.js  index.html  init-linux.sh  init.sh  package.json  readme.md  todo.md  txt
ZeroG/: Class.Get.html  Class.name.html  Class.registry.html  Entitas.Buffer.Buffer.html  Entitas.Buffer.Factory.html  Entitas.Buffer.pool.html  Entitas.Components.LayerComponent.html  Entitas.Components.ShowComponent.html  Entitas.Components.TintComponent.html  Entitas.Components.UnknownComponent.html  Entitas.Components.html  Entitas.Entity.AddTint.html  Entitas.Entity.AddVelocity.html  Entitas.Entity.Destroy.html  Entitas.Entity.HasAnyComponent.html  Entitas.Entity.HasComponent.html  Entitas.Entity.HasComponents.html  Entitas.Entity.IsActive.html  Entitas.Entity.RemoveTint.html  Entitas.Entity.RemoveVelocity.html  Entitas.Entity.SetActive.html  Entitas.Entity.SetId.html  Entitas.Entity.SetLayer.html  Entitas.Entity.SetName.html  Entitas.Entity.SetPool.html  Entitas.Entity.SetScale.html  Entitas.Entity.SetShow.html  Entitas.Entity.SetTransform.html  Entitas.Entity.SetVelocity.html  Entitas.Entity.ToString.html  Entitas.Entity.html  Entitas.Entity.layer.html  Entitas.Entity.onComponentAdded.html  Entitas.Entity.show.html  Entitas.Entity.transform.html  Entitas.Event.ComponentReplaced.ComponentReplaced.html  Entitas.Event.ComponentReplaced.Listener.html  Entitas.Event.ComponentReplaced.listeners.html  Entitas.Event.EntityChanged.Add.html  Entitas.Event.EntityChanged.Clear.html  (+681 more)
cmake/adria/: FindVala.cmake  ValaPrecompile.cmake  ValaVersion.cmake
cmake/vala/: ValaPrecompile.cmake
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
docs/ZeroG/: Class.Class.html  Class.ClsId.html  Class.Register.html  Class.ToString.html  Class.classes.html  Class.clsId.html  Class.html  Class.uuid.html  Entitas.ACTIVE.html  Entitas.Buffer.html  Entitas.Buffer.size.html  Entitas.ComponentString.html  Entitas.Components.VelocityComponent.html  Entitas.Entity.AddLayer.html  Entitas.Entity.Entity.html  Entitas.Entity.HasAnyComponent.html  Entitas.Entity.HasComponent.html  Entitas.Entity.HasComponents.html  Entitas.Entity.HasLayer.html  Entitas.Entity.HasTint.html  Entitas.Entity.HasVelocity.html  Entitas.Entity.IsShow.html  Entitas.Entity.RemoveLayer.html  Entitas.Entity.SetBounds.html  Entitas.Entity.SetPosition.html  Entitas.Entity.SetTint.html  Entitas.Entity.id.html  Entitas.Entity.mask.html  Entitas.Entity.name.html  Entitas.Entity.onComponentRemoved.html  Entitas.Entity.onComponentReplaced.html  Entitas.Entity.onEntityReleased.html  Entitas.Entity.pool.html  Entitas.Entity.tint.html  Entitas.Entity.velocity.html  Entitas.EntityFactory.html  Entitas.Event.ComponentReplaced.Add.html  Entitas.Event.ComponentReplaced.Clear.html  Entitas.Event.ComponentReplaced.Dispatch.html  Entitas.Event.ComponentReplaced.Handler.html  (+656 more)
include/: glib-error-new.h  glib-object.h  glib.h  glibconfig.h  mt19937ar.h  readme.md
include/gio/: gfile.h  gio.h  giotypes.h
include/glib/: garray.1.h  garray.h  gatomic.h  gerror.h  ghash.h  glist.h  gmacros.h  gmem.h  gmessages.h  gnode.h  gquark.h  gque.h  gslice.h  gslist.h  gstrfunc2.h  gstrfuncs.h  gstring.h  gtestutils.h  gthread.h  gtypes.h  gversionmacros.h
include/gobject/: gtype.h  gvaluecollector.h
lib/: components.vala  entity.vala  mt19937ar.c
lib/entitas/: Cache.vala  Group.vala  Matcher.vala  World.vala  entitas.vala  readme.md
lib/entitas/events/: ComponentReplaced.vala  EntityChanged.vala  EntityReleased.vala  GroupChanged.vala  GroupUpdated.vala  (+2 more)
lib/goop/: Class.vala  Guid.vala  Registry.vala
lib/sdx/: AbstractGame.vala  ApplicationListener.vala  Color.gs  Color.gs.txt  Color.vala  Files.vala  Font.vala  InputMultiplexer.vala  InputProcessor.vala  Screen.vala  exceptions.gs  exceptions.gs.txt  exceptions.vala  readme.md  sdx.vala
lib/sdx (copy)/: ApplicationListener.vala  Files.vala  InputProcessor.vala  sdx.1.vala.old  sdx.vala
lib/src/: Cakefile  example.avprj  main.c
lib/vapis/: SDL2_image.vapi  SDL2_mixer.vapi  SDL2_ttf.vapi  gio-2.0.vapi  glib-2.0.vapi  lua.vapi  sdl2.vapi
lib/vapis-em/: android.vapi  glib-2.0.vapi  glib-2.0.vapiz  lua.vapi  mt19937ar.vapi  sdl.vapi  sdl2.vapi
old/src/: CMakeLists.txt  adriac.vala  helpers.vala  parser.gs
old/tools/: post.coffee  pre-gs  pre-vala.coffee  proc  proc.coffee
po/: CMakeLists.txt  POTFILES.in
share/emvalac/: post  post.coffee  pre  pre-gs  pre-gs.coffee  pre-vala  pre-vala.coffee  pre.coffee  proc  proc.coffee  readme.md  tokenizer.js
share/valac2/: build.sh
src/: CMakeLists.txt  Cakefile  adriac.vala  example.avprj  helpers.vala  main.vala  parser.gs
src.working/: adriac.vala  helpers.vala  parser.gs
src/emvapis/: SDL2_mixer.vapi  android.vapi  readme.md  sdl2.vapi
src/entitas/: Group.vala  Matcher.vala  World.vala
src/sdx/: Color.gs  exceptions.gs
src/utils/: StringTokenizer.valaz  tokenizer.gs
src/vapis/: SDL2_ttf.vapi  android.vapi  glib-2.0.vapi  mt19937ar.vapi  sdl2.vapi
src/vapis-em/: SDL2_ttf.vapi  emscripten.vapi  glib-2.0.vapi  posix.vapi  sdl2.vapi
src/web/: index.html  index.js
tools/: post  post.coffee  pre-vala  pre-vala.coffee  pre-vala.coffee.old  readme.md  tokenizer.coffee
tools/boilerplate/: gs.coffee  gs.js  index.js  vala.coffee  vala.js
vapis/: SDL2_ttf.vapi  emscripten.vapi  readme.md  sdl2.vapi
(+54 files in other folders)
